--- a/src/app/Pages/client-profile/client-profile.html
+++ b/src/app/Pages/client-profile/client-profile.html
@@ -60,7 +60,7 @@
     </div>
   </div>
 
-  <!-- <div class="mx-0 g-5 row">
+ <div class="mx-0 g-5 row">
     <div class="col-lg-6 ps-2 pe-3 ms-1 ms-lg-0">
       <div class="d-flex row left-box rounded p-4">
         <div class="col px-0">
@@ -112,7 +112,7 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 </div>
 
 <app-projects-profile [tpyeOfProject]="false" />
