--- a/src/app/Layout/navbar/navbar.html
+++ b/src/app/Layout/navbar/navbar.html
@@ -1,5 +1,5 @@
 <!-- Start-nav-bar -->
-<div class="container">
+<div class=" ">
   <div class="row">
     <div class="mt-5 px-0 navbar navbar-expand-lg">
       <div class="container px-0">
@@ -11,8 +11,8 @@
           <span class="small navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="gap-xxl-5 gap-lg-4 navbar-nav mx-auto pe-lg-5 text-center">
+        <div class="collapse navbar-collapse ps-5" id="navbarSupportedContent">
+          <ul class="gap-xxl-5 gap-lg-4 navbar-nav  text-center mx-0">
             <li class="nav-item">
               <a class="nav-link" routerLink="/home" routerLinkActive="active">THE TEAM</a>
             </li>
@@ -28,7 +28,9 @@
             <li class="nav-item">
               <a class="nav-link" routerLink="/payment" routerLinkActive="active">PAYMENT</a>
             </li>
-
+      <li class="nav-item">
+              <a class="nav-link" routerLink="/arrival" routerLinkActive="active">ARRIVAL</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" routerLink="/notifications" routerLinkActive="active">NOTIFICATIONS</a>
             </li>
@@ -57,7 +59,7 @@
     justify-content: center;
     align-items: center;
   ">
-    <ul class="gap-xxl-5 gap-lg-4 navbar-nav mx-auto pe-lg-5 text-center">
+    <ul class="gap-xxl-5 gap-lg-4 navbar-nav mx-auto pe-lg-5 text-center ">
       <li class="nav-item">
         <a class="nav-link" (click)="toggleMenu()" routerLink="/home" routerLinkActive="active">THE TEAM</a>
       </li>
