--- a/src/app/Pages/client-profile/client-profile.html
+++ b/src/app/Pages/client-profile/client-profile.html
@@ -65,7 +65,7 @@
             </div>
                 <div class="mx-0 g-5 row">
                     <div class="col-lg-6 ps-2 pe-3  ms-1 ms-lg-0">
-                            <div class="d-flex row left-box rounded-3 p-4">
+                            <div class="d-flex row left-box rounded p-4">
                                 <div class="col px-0">
                                     <h6 class="low">ASSIGEND TO :</h6>
                                     <h4 class="mb-0">YOUSSEF - AYMAN</h4>
@@ -77,7 +77,7 @@
                                         <div><img src="assets/img/Mask group (3).svg" alt=""></div>
                                     </div>
                                 </div>
-                                <div class="d-flex rounded-3 px-0">
+                                <div class="d-flex rounded px-0">
                                     <div class="col ps-0 mt-auto ">
                                         <p class="small mb-0">4TH, OCT</p>
                                     </div>
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 ps-lg-3 ps-0 pe-0">
-                        <div class=" right-box h-100 rounded-3 p-4 ">
+                        <div class=" right-box h-100 rounded p-4 ">
                             <div class="row ps-0 pe-3 ms-0">
                                 <div class="col-lg col-8 px-0 pe-0">
                                     <h6 class="">GAFLA - SOCIAL MEDIA</h6>
