--- a/src/app/Layout/navbar/navbar.html
+++ b/src/app/Layout/navbar/navbar.html
@@ -1,8 +1,8 @@
 <!-- Start-nav-bar -->
-<div class=" ">
+<div class="container">
   <div class="row">
     <div class="mt-5 px-0 navbar navbar-expand-lg">
-      <div class="container px-0">
+      <div class="container px-0 mx-0 w-100">
         <a class="border-0 logo navbar-brand text-start me-xl-5 pe-xl-5" routerLink="/">
           <img class="border-0" src="assets/img/logo.svg" alt="Logo" />
         </a>
@@ -11,8 +11,8 @@
           <span class="small navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse ps-5" id="navbarSupportedContent">
-          <ul class="gap-xxl-5 gap-lg-4 navbar-nav  text-center mx-0">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="gap-xxl-5 gap-lg-4 navbar-nav mx-auto pe-lg-5 text-center">
             <li class="nav-item">
               <a class="nav-link" routerLink="/home" routerLinkActive="active">THE TEAM</a>
             </li>
@@ -59,7 +59,7 @@
     justify-content: center;
     align-items: center;
   ">
-    <ul class="gap-xxl-5 gap-lg-4 navbar-nav mx-auto pe-lg-5 text-center ">
+    <ul class="gap-xxl-5 gap-lg-4 navbar-nav mx-auto pe-lg-5 text-center">
       <li class="nav-item">
         <a class="nav-link" (click)="toggleMenu()" routerLink="/home" routerLinkActive="active">THE TEAM</a>
       </li>
