--- a/src/app/Layout/navbar/navbar.html
+++ b/src/app/Layout/navbar/navbar.html
@@ -75,6 +75,9 @@
       <li class="nav-item">
         <a class="nav-link" (click)="toggleMenu()" routerLink="/payment" routerLinkActive="active">PAYMENT</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="toggleMenu()" routerLink="/arrival" routerLinkActive="active">ARRIVAL</a>
+      </li>
 
       <li class="nav-item">
         <a class="nav-link" (click)="toggleMenu()" routerLink="/notifications"
