--- a/src/app/Pages/arrival/arrival.scss
+++ b/src/app/Pages/arrival/arrival.scss
@@ -51,7 +51,7 @@
   color: #fff;
   border: none;
   padding: 14px 28px;
-  border-radius: 30px;
+  border-radius: 9px !important;
   cursor: pointer;
   font-size: 15px;
   transition: 0.3s;
