--- a/src/app/Layout/footer/footer.html
+++ b/src/app/Layout/footer/footer.html
@@ -1,4 +1,5 @@
-<!-- Start footer -->
+<div class="container my-5">
+    <!-- Start footer -->
 <div class="footer ps-4 text-white mt-5">
     <div class="px-4" style="background-image: none;">
         <div class="row">
@@ -31,3 +32,4 @@
     </div>
 </div>
 <!-- End footer -->
+</div>
