--- a/src/app/Pages/Interfaces_Employee/projectDetalis/components/media-buying/media-buying.html
+++ b/src/app/Pages/Interfaces_Employee/projectDetalis/components/media-buying/media-buying.html
@@ -1,5 +1,5 @@
-<div class="fourth pt-5">
-  <div class="container-fluid text-white p-5 mt-5" style="background-color: #171818; border-radius: 13px">
+<div class="fourth pt-5 px-2">
+  <div class=" text-white p-5 mt-5" style="background-color: #171818; border-radius: 13px">
     <div class="row">
       <!-- Left: Media Buying & Campaign Type -->
       <div class="col-md-4 btnsactive">
