--- a/src/app/Pages/profile/profile.html
+++ b/src/app/Pages/profile/profile.html
@@ -1,5 +1,5 @@
 <h1 class="mt-5 text-white px text-end big">PROFILE EMPLOYEE</h1>
-<div class="text-white profile  mb-5">
+<div class="text-white profile my-8">
     <div class=" p-xl-5 p-4 rounded">
         <div class="row">
             <div class="pt-lg-0 col half-logo"><img class="top mt-0 mb-3" src="assets/img/half-logo.svg" alt="">
@@ -174,4 +174,5 @@
 </div>
 
 <app-projects-profile />
+<app-arrival-time/>
 <app-feedback-employees/>
