--- a/src/app/Pages/projects/projectDetalis/components/posts/posts.html
+++ b/src/app/Pages/projects/projectDetalis/components/posts/posts.html
@@ -24,40 +24,22 @@
       </div>
       <div class="d-flex col rounded px-3 ps-0" style="background-color: transparent">
         <!-- month-picker.component.html -->
-        <div class="month-picker d-flex w-100 justify-content-between flex-column gap-2">
-          <div class="header m-0">
-            <span (click)="prevPage()"
-              ><svg
-                width="14"
-                height="12"
-                viewBox="0 0 14 12"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M0.21967 4.99262C-0.0732231 5.28551 -0.0732231 5.76039 0.21967 6.05328L4.99264 10.8262C5.28553 11.1191 5.76041 11.1191 6.0533 10.8262C6.34619 10.5334 6.34619 10.0585 6.0533 9.76559L1.81066 5.52295L6.0533 1.28031C6.34619 0.987415 6.34619 0.512541 6.0533 0.219648C5.76041 -0.0732456 5.28553 -0.0732456 4.99264 0.219648L0.21967 4.99262ZM13.75 5.52295L13.75 4.77295L0.75 4.77295L0.75 5.52295L0.75 6.27295L13.75 6.27295L13.75 5.52295Z"
-                  fill="white"
-                />
-              </svg>
+        <div class="month-picker d-flex w-100 justify-content-between flex-column ">
+                <div class="header m-0">
+            <span (click)="prevPage()" class="routesX">
+              <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M22.0607 12.1066C22.6464 11.5208 22.6464 10.571 22.0607 9.98524L12.5147 0.439296C11.9289 -0.146491 10.9792 -0.146491 10.3934 0.439296C9.80761 1.02508 9.80761 1.97483 10.3934 2.56062L18.8787 11.0459L10.3934 19.5312C9.80761 20.117 9.80761 21.0667 10.3934 21.6525C10.9792 22.2383 11.9289 22.2383 12.5147 21.6525L22.0607 12.1066ZM0 11.0459L1.31134e-07 12.5459L21 12.5459L21 11.0459L21 9.5459L-1.31134e-07 9.5459L0 11.0459Z" fill="white"/>
+</svg>
             </span>
             <span> Page {{ pageNumber }} </span>
             <span (click)="nextPage()"
-              ><svg
-                width="13"
-                height="12"
-                viewBox="0 0 13 12"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M12.5303 6.05328C12.8232 5.76039 12.8232 5.28551 12.5303 4.99262L7.75736 0.219648C7.46447 -0.0732455 6.98959 -0.0732455 6.6967 0.219648C6.40381 0.512541 6.40381 0.987415 6.6967 1.28031L10.9393 5.52295L6.6967 9.76559C6.40381 10.0585 6.40381 10.5334 6.6967 10.8262C6.98959 11.1191 7.46447 11.1191 7.75736 10.8262L12.5303 6.05328ZM0 5.52295L4.91753e-08 6.27295L12 6.27295L12 5.52295L12 4.77295L-4.91753e-08 4.77295L0 5.52295Z"
-                  fill="white"
-                />
-              </svg>
+              ><svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M22.0607 12.1066C22.6464 11.5208 22.6464 10.571 22.0607 9.98524L12.5147 0.439296C11.9289 -0.146491 10.9792 -0.146491 10.3934 0.439296C9.80761 1.02508 9.80761 1.97483 10.3934 2.56062L18.8787 11.0459L10.3934 19.5312C9.80761 20.117 9.80761 21.0667 10.3934 21.6525C10.9792 22.2383 11.9289 22.2383 12.5147 21.6525L22.0607 12.1066ZM0 11.0459L1.31134e-07 12.5459L21 12.5459L21 11.0459L21 9.5459L-1.31134e-07 9.5459L0 11.0459Z" fill="white"/>
+</svg>
             </span>
           </div>
 
-          <div class="grid post-card">
+          <div class="grid post-card flex-grow-1 mb-2">
             <div
               *ngFor="let post of displayPosts; let i = index"
               class="cardSelect"
@@ -100,42 +82,23 @@
           </div>
 
           <div class="footer m-0">
-            <span (click)="prevMonth()"
-              ><svg
-                width="14"
-                height="12"
-                viewBox="0 0 14 12"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M0.21967 4.99262C-0.0732231 5.28551 -0.0732231 5.76039 0.21967 6.05328L4.99264 10.8262C5.28553 11.1191 5.76041 11.1191 6.0533 10.8262C6.34619 10.5334 6.34619 10.0585 6.0533 9.76559L1.81066 5.52295L6.0533 1.28031C6.34619 0.987415 6.34619 0.512541 6.0533 0.219648C5.76041 -0.0732456 5.28553 -0.0732456 4.99264 0.219648L0.21967 4.99262ZM13.75 5.52295L13.75 4.77295L0.75 4.77295L0.75 5.52295L0.75 6.27295L13.75 6.27295L13.75 5.52295Z"
-                  fill="white"
-                />
-              </svg>
+            <span (click)="prevMonth()" class="routesX">              <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M22.0607 12.1066C22.6464 11.5208 22.6464 10.571 22.0607 9.98524L12.5147 0.439296C11.9289 -0.146491 10.9792 -0.146491 10.3934 0.439296C9.80761 1.02508 9.80761 1.97483 10.3934 2.56062L18.8787 11.0459L10.3934 19.5312C9.80761 20.117 9.80761 21.0667 10.3934 21.6525C10.9792 22.2383 11.9289 22.2383 12.5147 21.6525L22.0607 12.1066ZM0 11.0459L1.31134e-07 12.5459L21 12.5459L21 11.0459L21 9.5459L-1.31134e-07 9.5459L0 11.0459Z" fill="white"/>
+</svg>
             </span>
             <span>{{ monthNames[currentMonth()] }}</span>
             <span (click)="nextMonth()"
-              ><svg
-                width="13"
-                height="12"
-                viewBox="0 0 13 12"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M12.5303 6.05328C12.8232 5.76039 12.8232 5.28551 12.5303 4.99262L7.75736 0.219648C7.46447 -0.0732455 6.98959 -0.0732455 6.6967 0.219648C6.40381 0.512541 6.40381 0.987415 6.6967 1.28031L10.9393 5.52295L6.6967 9.76559C6.40381 10.0585 6.40381 10.5334 6.6967 10.8262C6.98959 11.1191 7.46447 11.1191 7.75736 10.8262L12.5303 6.05328ZM0 5.52295L4.91753e-08 6.27295L12 6.27295L12 5.52295L12 4.77295L-4.91753e-08 4.77295L0 5.52295Z"
-                  fill="white"
-                />
-              </svg>
+              >              <svg width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+<path d="M22.0607 12.1066C22.6464 11.5208 22.6464 10.571 22.0607 9.98524L12.5147 0.439296C11.9289 -0.146491 10.9792 -0.146491 10.3934 0.439296C9.80761 1.02508 9.80761 1.97483 10.3934 2.56062L18.8787 11.0459L10.3934 19.5312C9.80761 20.117 9.80761 21.0667 10.3934 21.6525C10.9792 22.2383 11.9289 22.2383 12.5147 21.6525L22.0607 12.1066ZM0 11.0459L1.31134e-07 12.5459L21 12.5459L21 11.0459L21 9.5459L-1.31134e-07 9.5459L0 11.0459Z" fill="white"/>
+</svg>
             </span>
           </div>
         </div>
       </div>
 
-      <div class="d-flex justify-content-between align-items-start px-0 my-3 px-3">
+      <div class="d-flex justify-content-between align-items-end px-0 my-3 px-3">
         <p class="p-0 m-0">Project Progress</p>
-        <div class="d-flex gap-1 ps-5">
+        <div class="d-flex gap-1 ps-5 ">
   <button class="btn" (click)="updateProgress(0)">+25%</button>
   <button class="btn" (click)="updateProgress(1)">+50%</button>
   <button class="btn" (click)="updateProgress(2)">+75%</button>
