--- a/src/app/Pages/projects/projects-profile/projects-profile.html
+++ b/src/app/Pages/projects/projects-profile/projects-profile.html
@@ -1,5 +1,5 @@
 <!-- Start Projects-->
-<div class="text-white start-projects px-md-0 px-3">
+<div class="text-white start-projects px-md-0 px-3 my-8">
     <div class=" " style="background-image: none;">
         <div class="d-flex justify-content-end align-items-center my-5">
 
