--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,13 @@ body {
 .cr{
     cursor: pointer !important;
 }
+.routesX{
+    rotate: 180deg;
+    margin-bottom: 7px !important;
+}
+.my-8{
+    margin-bottom: 120px  !important;
+}
  .swal2-toast{
         background:linear-gradient(to right, rgb(0 68 68), rgb(0 170 170)) !important;
     color: white !important;
