--- a/src/app/Pages/Interfaces_Employee/projectDetalis/components/upload-files/upload-files.html
+++ b/src/app/Pages/Interfaces_Employee/projectDetalis/components/upload-files/upload-files.html
@@ -1,4 +1,4 @@
-<div class="project-detail-page">
+<div class="project-detail-page my-8">
   <div class="px-md-0 mx-3">
     <h1 class="mt-5 text-white text-end big">PROJECT DETAILS</h1>
     <div class="text-white project rounded p-md-5 p-4">
@@ -121,7 +121,7 @@
       <div class="row mx-0 mt-2">
         <div class="col-6 text-start  pt-md-3 pt-4 ps-0">
 <button
-  class="border-0 rounded text-white small px-md-4 px-3 pt-1 mt-4 end-but"
+  class="border-0 rounded-3 text-white small px-md-4 px-3 pt-1 mt-4 end-but"
   style="background-color: #0b6b6e"
   (click)="changeStatus()">
 
