--- a/src/app/Pages/client/client.html
+++ b/src/app/Pages/client/client.html
@@ -1,8 +1,6 @@
 <div class="text-white team">
-  <div class="d-flex justify-content-between align-items-center headerText">
-    <h2 class="pt-sm-4 logout" style="color: #00bec5; cursor: pointer" routerLink="/addclient">
-      Add Client <i class="fa-solid fa-arrow-right fs-5" style="color: #00bec5"></i>
-    </h2>
+  <div class="d-flex justify-content-end align-items-center headerText">
+
     <h1 class="big mb-0">CLIENTS</h1>
   </div>
   <div class="p-md-5 p-3 rounded team-container">
@@ -159,4 +157,8 @@
       }
     </div>
   </div>
+
+      <h2 class="pt-sm-4 logout  text-end" style="color: #00bec5; cursor: pointer" routerLink="/addclient">
+      Add Client <i class="fa-solid fa-arrow-right fs-5" style="color: #00bec5"></i>
+    </h2>
 </div>
