--- a/src/app/Pages/payments-admin/payments-admin.html
+++ b/src/app/Pages/payments-admin/payments-admin.html
@@ -24,7 +24,7 @@
 
       <div class="IsPaid">
         @for (payment of paidPayments(); track payment.id) {
-       <div class="paymentAdd mb-3">
+       <div class="paymentAdd mb-3 cr">
           <p class="mb-2">
             <span>{{ payment.clientName }} ({{ payment.projectName }})</span>
           </p>
@@ -62,13 +62,13 @@
       <!-- UNPAID -->
       <div class="IsPaid">
         @for (payment of unPaidPayments(); track payment.id) {
-        <div class="paymentAdd mb-3">
+        <div class="paymentAdd mb-3 cr">
           <p class="mb-2">
             <span>{{ payment.clientName }} ({{ payment.projectName }})</span>
           </p>
 
           <div class="text-start paymentbtn text-white notifiction-card-none w-100 rounded"
-            [ngClass]="{ isLate: payment.isLate }" (click)="togglePaymentStatus(payment)">
+          (click)="togglePaymentStatus(payment)">
             <p class="fw-bolder mb-0">
               USD {{ payment.amount }}
             </p>
