--- a/src/app/Pages/projects/projects/projects.html
+++ b/src/app/Pages/projects/projects/projects.html
@@ -1,7 +1,6 @@
 <div class="text-white team">
-    <div class="d-flex justify-content-between align-items-center headerText">
-        <h2 class=" pt-sm-4 logout" style="color: #00bec5; cursor: pointer;" routerLink="/addproject">Add Project <i
-                class="fa-solid fa-arrow-right fs-5" style="color: #00bec5;"></i></h2>
+    <div class="d-flex justify-content-end align-items-center headerText">
+
         <h1 class=" big mb-0">PROJECTS</h1>
 
     </div>
@@ -172,4 +171,7 @@
 
         </div>
     </div>
+
+            <h2 class=" pt-sm-4 logout  text-end" style="color: #00bec5; cursor: pointer;" routerLink="/addproject">Add Project <i
+                class="fa-solid fa-arrow-right fs-5" style="color: #00bec5;"></i></h2>
 </div>
