--- a/src/app/Pages/Interfaces_Employee/projectDetalis/components/upload-files/upload-files.html
+++ b/src/app/Pages/Interfaces_Employee/projectDetalis/components/upload-files/upload-files.html
@@ -109,7 +109,7 @@
         
         class="border-0 rounded w-100 text-white small py-2 mt-4"
           style="background-color: #0b6b6e">
-                 {{ isLoading() ? 'UPLOADING...' : 'UPLOAD' }}
+      <span class="mt-1">                 {{ isLoading() ? 'UPLOADING...' : 'UPLOAD' }}</span>
 
         </button>
 
