--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,9 @@ body {
 .my-8{
     margin-bottom: 120px  !important;
 }
+span.mt1{
+    display: block;
+}
  .swal2-toast{
         background:linear-gradient(to right, rgb(0 68 68), rgb(0 170 170)) !important;
     color: white !important;
