--- a/src/app/Pages/Interfaces_Clients/feedbackclient/feedbackclient.html
+++ b/src/app/Pages/Interfaces_Clients/feedbackclient/feedbackclient.html
@@ -1,4 +1,4 @@
-<div class="text-white feed-back px-md-0 px-3">
+<div class="text-white feed-back px-md-0 px-3 container" >
     <div class=" " style="background-image: none;">
 
         <h1 class="mb-4 text-end  big px-0 ">FEEDBACKS</h1>
@@ -53,7 +53,6 @@
                   </div>
                 }
             </div>
-        <h1 class="text-end pe-0 date mb-0 mt-4">{{ currentYear }}</h1>
         </div>
 
 
