--- a/src/app/Pages/Interfaces_Clients/projectDetalis/components/upload-files/upload-files.scss
+++ b/src/app/Pages/Interfaces_Clients/projectDetalis/components/upload-files/upload-files.scss
@@ -5,6 +5,11 @@
   border-radius: 8px;
 
 }
+.second h4 {
+    font-size: 23px;
+    color: #00BEC5;
+    line-height: 1.2;
+}
 .file-card {
   display: flex;
   align-items: center;
